2003-07-11  Lars Clausen  <lrclause@cs.uiuc.edu>
	
	* plug-ins/metapost/render_metapost.[ch] : Applied patch from
	Chris Sperandio <sperandi@eng.usf.edu>:  Fixed linewidths and
	arcs.  Implemented images (though there is some pixelization and
	banding in the output).  Changed output file format to be a little
	more readable.  

	* app/app_procs.c (app_exit): Added message for double exit, which
	shouldn't happen any more.  Also preventing strange g_object_unref
	messages by having a printf after gtk_main_quit.  This is really
	weird.

	* app/interface.c (toolbox_delete): Avoid double app_exit call by
	removing handler for destroy when delete is called.

2003-07-07  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/display.h: 
	* app/display.c (ddisplay_scroll_to_object,
	ddisplay_scroll_center_point):  New function for easy scrolling to
	object or point.

2003-07-06  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xslt/Makefile.am: Patch from Hubert Figuiere:  Add
	$(srcdir) on stylesheets.xml.

	* app/menus.c: Patch from Hubert Figuiere: Adds help menu to
	diagram menus (since they're at the top by default now).  Also
	move the Properties... menu item from Dialogs to Objects.  Dialogs
	menu should disappear at some point.

	* autogen.sh: Patch from Hubert Figuiere: Don't automatically call
	./configure from ./autogen.sh, as configure may need to be run
	from a different directory.  (Also more standard this way.)

	* app/app_procs.c (app_init): 
	* app/Makefile.am (INCLUDES): Gnome standardization patch from
	Alex. 

2003-07-03  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/flowchart/parallelogram.c (pgram_update_data):
	Left/right alignment for parallelograms.  Doesn't use all
	available space, but then pgrams also ignore their shear value.
	This thing needs a loving hand.

2003-07-01  Hans Breuer  <hans@breuer.org>

	* lib/properties.h : introduce PROP_FLAG_OPTIONAL
	* lib/proplist.c : don't complain if optional attr is missing